[package]
name = "octoprint-tui"
version = "0.1.0"
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
tui = "0.5.0"
termion = "1.5.1"
hyper = "0.12"
tokio = "0.1.18"
tokio-timer = "0.2.10"
futures = "0.1.26"
